data/derived/comb/progs/unify/prog3517.ml.out
Characters 152-156:
  let (bar, res) = List.fold_left f base args in
                                         ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
